# AGENTIC_FRAMEWORK

./: .env  .gitignore  README.md  main.py  multimodal.ipynb  pyproject.toml  requirements.txt
Basic_chatbot/: 1_basic_chatbot.ipynb
Human_loop/: Testing.ipynb  test2.ipynb
Multimodal_model/: multimodal.ipynb
