[project]
name = "agenti-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fitz>=0.0.1.dev2",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-deepseek>=0.1.4",
    "langchain-groq>=0.3.7",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.4",
    "langsmith>=0.4.13",
    "numpy>=2.2.6",
    "pillow>=11.3.0",
    "pymupdf>=1.26.4",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.1",
]
